--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <!-- Prevent FOUC (Flash of Unstyled Content) for dark mode -->
+    <script>
+      (function () {
+        try {
+          const theme = localStorage.getItem("theme");
+          const systemPrefersDark = window.matchMedia(
+            "(prefers-color-scheme: dark)",
+          ).matches;
+
+          if (
+            theme === "dark" ||
+            (theme === "system" && systemPrefersDark) ||
+            (!theme && systemPrefersDark)
+          ) {
+            document.documentElement.classList.add("dark");
+          } else {
+            document.documentElement.classList.remove("dark");
+          }
+        } catch (e) {
+          console.error("Failed to set initial theme:", e);
+        }
+      })();
+    </script>
     <style>
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
